[package]
name = "bee_herder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
sled = "0.34.7"
indicatif = "0.17.0"
bincode = "1.3.3"
hex = "0.4.3"
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0.143", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.9"
bee_api = { path = "../bee_api" }
mantaray = { path = "../mantaray" }
governor = "0.4.2"
thiserror = "1.0.32"
futures = "0.3.23"